2009-01-30  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7123: Select wizard doesn't work in Safari (Thanks to Ismaël Bidau)

2009-01-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #10304: Links in the warning box are not visible as links (thanks to Georg Ringer)

2009-01-30  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #10031: Icon in "text w/ picture" and "picture" does not change.
	* Fixed bug #10045 follow-up: removed call to non existent function
	* Fixed bug #10045 BUG missleading Errormessage with emtpy COA (thanks to Ingo Schmitt)

2009-01-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10241: DB check ->Full search ->Advanced query always includes deleted field (Thanks to Christian Kuhn)

2009-01-27  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug  #10178: Toolbar menu fails if there are no menu items
	
2009-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9904: htmlArea RTE: RTE.default.buttons.table.properties.borderStyle.removeItems is not honored
	* Fixed bug #9905: htmlArea RTE: Table properties: Removing headers leaves an empty fieldset

2009-01-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9965: htmlArea RTE: IE jumps down to last RTE input
	* Fixed bug #9785: htmlArea RTE: Disabling images in RTE still leaves the toolbar button

2009-01-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.2.5

2009-01-24  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10205: DB session record is only created when user is authenticated (thanks also to Michael Stucki)

2009-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9345: Bug: CSV export includes _CLIPBOARD_ in header row (thanks to Christian Kuhn)

2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.4

2009-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9774: Incorrect validation of allowed classes in RTE transformation

2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>
