@@ -1,3 +1,7 @@
+2009-02-01  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #10323: htmlArea RTE: hotkey CTRL+0 is not honoured
+
 2009-01-30  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #7123: Select wizard doesn't work in Safari (Thanks to Ismaël Bidau)
